--- a/sample/android-app/src/main/res/layout/activity_main.xml
+++ b/sample/android-app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,27 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/predicted_text"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Please draw a digit"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/clear_button"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/draw_view"/>
+            android:id="@+id/predicted_text"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please draw a digit"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@id/clear_button"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/draw_view"/>
+    <TextView
+            android:id="@+id/predicted_text_tf"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please draw a digit"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@id/predicted_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/draw_view"/>
 
     <Button
         android:id="@+id/clear_button"
